Reviewed memory leaks in Video()

--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": -6.269792556762695,
-            "y": 5.244678497314453,
-            "z": 1.5825767517089844
+            "x": -28.974546432495117,
+            "y": 26.57630729675293,
+            "z": 1.688306212425232
         },
         "projection": 0,
         "target": {
-            "x": 1.979391098022461,
-            "y": 1.4127836227416992,
-            "z": 6.194211959838867
+            "x": -21.72842025756836,
+            "y": 19.40276336669922,
+            "z": 1.505366325378418
         },
         "type": "camera",
         "up": {
@@ -85,7 +85,7 @@
             },
             "shininess": 0.5
         },
-        "texture_path": "",
+        "texture_path": "project/game/192357 (1080p).mp4",
         "tiling": [
             1.0,
             1.0
@@ -271,7 +271,7 @@
             "y": -1.0,
             "z": 1.0
         },
-        "id": -822717184,
+        "id": 1916894208,
         "intensity": 1.8079999685287476,
         "isChild": false,
         "light_type": 0,
