Make entity duplication impossible when moving camera

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,57
-Size=1824,915
+Size=1920,982
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,48 +9,53 @@ Size=400,400
 Collapsed=0
 
 [Window][ Assets Explorer]
-Pos=371,490
-Size=539,482
+Pos=371,557
+Size=594,482
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][ Code Editor]
-Pos=912,490
-Size=404,482
+Pos=967,557
+Size=445,482
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][ Objects List]
 Pos=0,57
-Size=369,915
+Size=369,982
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][ Scene Editor]
 Pos=371,57
-Size=945,431
+Size=1041,498
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][ Inspector]
-Pos=1318,57
-Size=506,915
+Pos=1414,57
+Size=506,492
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Are you sure you want to exit?]
-Pos=812,441
+Pos=860,474
 Size=370,90
 Collapsed=0
 
 [Window][Debug]
-Pos=1318,517
-Size=506,455
+Pos=1414,551
+Size=506,488
 Collapsed=0
 DockId=0x00000006,0
 
+[Window][Appearance]
+Pos=60,60
+Size=370,230
+Collapsed=0
+
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X Selected=0xA951099C
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1920,982 Split=X Selected=0xA951099C
   DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1316,915 Split=X
     DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=369,915 Selected=0xB6EB8CBE
     DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=945,915 Split=Y
