Simple test game

--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": -22.946653366088867,
-            "y": 16.74785041809082,
-            "z": 0.34369850158691406
+            "x": -19.91806411743164,
+            "y": 15.732196807861328,
+            "z": -5.079514503479004
         },
         "projection": 0,
         "target": {
-            "x": 23.39384651184082,
-            "y": -2.0205039978027344,
-            "z": -0.150970458984375
+            "x": -11.009925842285156,
+            "y": -13.514093399047852,
+            "z": 34.48362731933594
         },
         "type": "camera",
         "up": {
@@ -492,7 +492,7 @@
         "name": "Monster",
         "normal_texture_path": "",
         "position": {
-            "x": 0.0,
+            "x": -19.40000343322754,
             "y": 3.600004196166992,
             "z": 18.000032424926758
         },
@@ -512,7 +512,7 @@
             "y": 3.0,
             "z": 3.0
         },
-        "script_index": "",
+        "script_index": "monster1",
         "script_path": "project/game/monster.py",
         "surface_material": {
             "DiffuseIntensity": 0.0,
@@ -546,7 +546,7 @@
             "y": -0.3240000009536743,
             "z": 1.0
         },
-        "id": -1125328640,
+        "id": -2116729344,
         "intensity": 5.0,
         "isChild": false,
         "light_type": 0,
@@ -583,7 +583,7 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": -1125328640,
+        "id": -2116729344,
         "intensity": 5.0,
         "isChild": false,
         "light_type": 1,
